tdf#38101 remove highlight after using format painter

Change-Id: I631fd1357c7b066eaad98f5b2f0950f59330330e